--- a/index.html
+++ b/index.html
@@ -1,45 +1,161 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <title>小学生作业</title>
-        <link rel='stylesheet' href='lib/css/bootstrap.min.css' type='text/css'>
-        <script type='text/javascript' src='lib/js/jquery-1.11.2.min.js'></script>
-        <script type='text/javascript' src='lib/js/bootstrap.min.js'></script>
-        <script type='text/javascript' src='config/config.js'></script>
-        <script type='text/javascript' src='modules/base_module.js'></script>
-        <script type='text/javascript' src='lib/js/main.js'></script>
-        <style>
-            * {
-                font-size: 16px;
-            }
 
-            #header {
-                text-align: center;
-            }
-            
-            @media print {
-                .no-print {
-                    height: 3px;
-                    visibility: hidden;
-                }
+<head>
+  <title>加减法题目生成器</title>
+  <meta charset="UTF-8">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
+  <style>
+    .answer {
+      display: none;
+      margin-left: 10px;
+    }
 
-                #header {
-                    border: 0;
-                }
-            }
+    p {
+      margin-bottom: 0px;
+      margin-top: 5px;
+      width: 50%;
+      word-wrap: break-word;
+    }
 
-            @page
-            {
-                size: auto;
-                margin: 13px auto;
-            }
-        </style>
-    </head>
-    <body>
-        <div class='container' style='text-align: center'>
-            <h4><input type='text' id='header'/></h4>
-        </div>
-    </body>
+    #questionsContainer {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%
+    }
+
+    #questionsContainer p {
+      width: 50%;
+    }
+
+    body {
+      font-size: 16px;
+    }
+
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    #resultInput {
+      width: 100px;
+    }
+
+    #contain {
+      display: flex;
+      margin-bottom: 10px;
+    }
+
+    #contain div {
+      width: 13%
+    }
+
+  </style>
+</head>
+
+<body>
+  <div class="container mt-5">
+    <h2 class="text-center">加减法题目生成器</h2>
+    <div id="contain">
+      <div class="col-md-3" style="width: 150px">
+        <label for="quantityInput" class="form-label">题目数量:</label>
+        <input id="quantityInput" type="number" min="1" max="100" class="form-control" value="50">
+      </div>
+      <div class="col-md-3" style="width: 100px">
+        <label for="digitInput" class="form-label">位数:</label>
+        <input id="digitInput" type="number" min="1" max="2" class="form-control" value="2">
+      </div>
+      <div class="col-md-3" style="display: none;">
+        <label for="mixInput" class="form-label">混合加减法:</label>
+        <input id="mixInput" type="checkbox" class="form-control">
+      </div>
+      <div class="col-md-3" style="width: 220px">
+        <label for="resultInput" class="form-label">结果最大值:</label>
+        <input id="resultInput" type="number" min="1" max="100" class="form-control" value="100">
+      </div>
+      <div style="width: 100px">
+        <button id="generateBtn" class="btn btn-primary">生成题目</button>
+      </div>
+      <div class="form-check ml-3" style="width: 100px">
+        <input id="showAnswerCheckbox" type="checkbox" class="form-check-input">
+        <label for="showAnswerCheckbox" class="form-check-label">显示答案</label>
+      </div>
+      <div style="width: 50px">
+        <button type="button" onclick="printPage()">打印</button>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div id="questionsContainer"></div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="generate.js"></script>
+  <script>
+    document.getElementById('generateBtn').addEventListener('click', function () {
+      var quantity = parseInt(document.getElementById('quantityInput').value);
+      var digits = parseInt(document.getElementById('digitInput').value);
+      var mix = document.getElementById('mixInput').checked;
+      var maxResult = parseInt(document.getElementById('resultInput').value);
+      generateQuestions(quantity, digits, mix, maxResult);
+    });
+    document.getElementById('showAnswerCheckbox').addEventListener('change', function () {
+      var showAnswer = this.checked;
+      toggleAnswerVisibility(showAnswer);
+    });
+    function generateQuestions(quantity, digits, mix, maxResult) {
+      var showAnswer = document.getElementById('showAnswerCheckbox').checked;
+      var container = document.getElementById('questionsContainer');
+      container.innerHTML = '';
+      for (var i = 0; i < quantity;) {
+        var number1 = Math.floor(Math.random() * Math.pow(10, digits));
+        var number2 = mix ? Math.floor(Math.random() * number1) + 1 : Math.floor(Math.random() * Math.pow(10, digits));
+        var operator = Math.random() < 0.5 ? '+' : '-';
+        var answer = operator === '+' ? number1 + number2 : number1 - number2;
+        // 判断是否需要重新生成题目
+        if ((operator === '-' && answer < 0) || answer > maxResult) {
+          continue;
+        }
+        var questionText = (i + 1) + '. ' + number1 + ' ' + operator + ' ' + number2 + ' = ';
+        var question = createQuestionElement(questionText);
+        var answerElement = createAnswerElement(answer);
+        if (showAnswer) {
+          answerElement.style.display = 'inline';
+        }
+        question.appendChild(answerElement);
+        container.appendChild(question);
+        i++;
+        // 题目数量已达到要求，退出循环
+        if (i >= quantity) {
+          break;
+        }
+        // 当前行已生成两个问题，添加一个换行元素
+        if (i % 2 === 0) {
+          container.appendChild(document.createElement('br'));
+        }
+      }
+    }
+    function createQuestionElement(questionText) {
+      var question = document.createElement('p');
+      question.textContent = questionText; return question;
+    }
+    function createAnswerElement(answerText) {
+      var answer = document.createElement('span');
+      answer.textContent = answerText; answer.classList.add('answer');
+      return answer;
+    }
+    function toggleAnswerVisibility(showAnswer) {
+      var answers = document.querySelectorAll('.answer');
+      for (var i = 0; i < answers.length; i++) {
+        answers[i].style.display = showAnswer ? 'inline' : 'none';
+      }
+    }
+    function printPage() {
+      window.print();
+    }
+  </script>
+</body>
+
 </html>
-
